mapApp CRUD lesson

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,11 @@
 html, body {
     height: 100%;
+    
+ }
+
+ .mybody{
+    background: black;
+
  }
 #myImg{
     height: 30em;
@@ -8,9 +14,10 @@ html, body {
 .myjumbo{
     margin-top: 5em;
     text-align: center;
-    background-color: white;
+    background-color: black;
 }
 
 #map { 
     height: 40em;
  }
+
